targets/srv0/k3s/authelia/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-ingress
  namespace: base
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`auth.$SERVICES_DOMAIN`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: authelia-prod-tls
